package com.hy.learn.base.design.proxy;

/**
 * @author Created by hy
 * @date on 2019/11/8 16:26
 */
public interface IHello {

    void sayHello(String name);

    void sayGoodBye(String name);

}
